force-app/main/default/objects/Billing_Cut_Off_Schedule__c/Billing_Cut_Off_Schedule__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To enter billing cut off and invoice mailing dates from the RM and DB&amp;R calendars (Enhancment Case: 01159965)</description>
    <label>Billing Cut Off Schedule</label>
</CustomObject>