force-app/main/default/objects/Billing_Cut_Off_Schedule__c/fields/Billing_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cut_Off_Date__c</fullName>
    <description>billing Cut-Off Dates from the RM and DB&amp;R calendars</description>
    <label>Billing Cut Off Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>