force-app/main/default/objects/Billing_Cut_Off_Schedule__c/fields/Invoice_Mailing_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Mailing_Date__c</fullName>
    <description>Invoice Mailing Dates from the RM and DB&amp;R calendars</description>
    <label>Invoice Mailing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>