force-app/main/default/objects/Billing_Cut_Off_Schedule__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <description>used to distinguish between RM and DB&amp;R cut-off dates</description>
    <label>Service Line</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>