force-app/main/default/objects/Billing_Cut_Off_Schedule__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>used to indicate the calendar year</description>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>