force-app/main/default/objects/Billing_Cut_Off_Schedule__c/listViews/All_Dates.listView-meta.xml
<ListView>
    <fullName>All_Dates</fullName>
    <columns>NAME</columns>
    <columns>Billing_Cut_Off_Date__c</columns>
    <columns>Invoice_Mailing_Date__c</columns>
    <columns>Service_Line__c</columns>
    <columns>Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Dates</label>
    <language>en_US</language>
</ListView>