force-app/main/default/objects/Billing_Cut_Off_Schedule__c/listViews/DB_R_Service_Line_Dates.listView-meta.xml
<ListView>
    <fullName>DB_R_Service_Line_Dates</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Billing_Cut_Off_Date__c</columns>
    <columns>Invoice_Mailing_Date__c</columns>
    <columns>Service_Line__c</columns>
    <columns>Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Line__c</field>
        <operation>equals</operation>
        <value>DB&amp;R</value>
    </filters>
    <label>DB&amp;R Service Line Dates</label>
    <language>en_US</language>
    <sharedTo>
        <role>IRONMTNADMIN</role>
    </sharedTo>
</ListView>